-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 13.0.0-beta1
-
None
-
391e7ae34 (master)
1) When trying to add a "SubDirs" template, the wizard to add the first subproject defaults to cmake
2) When trying to add a subproject the wizard defaults to cmake
Both of those wizards should not allow the user to switch the project type away from what the parent project is.