src/plugins/projectexplorer/projectexplorerconstants.h
@@ -115,6 +115,8 @@ const char PREFERRED_PROJECT_NODE_PATH[] = "ProjectExplorer.PreferredProjectPath
 const char PROJECT_POINTER[] = "ProjectExplorer.Project";
 const char PROJECT_KIT_IDS[] = "ProjectExplorer.Profile.Ids";
 const char QT_KEYWORDS_ENABLED[] = "ProjectExplorer.QtKeywordsEnabled";
+const char PROJECT_ISSUBPROJECT[] = "IsSubproject"; // Used inside wizard, no prefix!
+const char PROJECT_ENABLESUBPROJECT[] = "ProjectExplorer.EnableSubproject";
 
 // Build step lists ids:
 const char BUILDSTEPS_CLEAN[] = "ProjectExplorer.BuildSteps.Clean";
